Final website version 8080 - Complete website with all updates including navigation fixes, case studies, and styling improvements

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="about.html" class="nav-link active">About</a></li>
-                    <li><a href="offerings.html" class="nav-link">Services</a></li>
+                    <li><a href="offerings.html" class="nav-link">Offerings</a></li>
                     <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
+                    <li><a href="about.html" class="nav-link active">About</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
@@ -79,9 +79,141 @@
                         <span>CPM</span>
                         <p>Certified Product Manager</p>
                     </div>
+                    <div class="certification-badge">
+                        <i class="fas fa-shield-alt"></i>
+                        <span>HIPAA</span>
+                        <p>HIPAA Awareness for Business Associates</p>
+                    </div>
+                    <div class="certification-badge">
+                        <i class="fas fa-check-circle"></i>
+                        <span>ISO</span>
+                        <p>ISO13485:2016 Implementation</p>
+                    </div>
+                    <div class="certification-badge">
+                        <i class="fas fa-chart-line"></i>
+                        <span>Analytics</span>
+                        <p>Marketing & Google Analytics</p>
+                    </div>
+                    <div class="certification-badge">
+                        <i class="fas fa-cube"></i>
+                        <span>Blockchain</span>
+                        <p>Blockchain A-Z for Healthcare</p>
+                    </div>
                 </div>
             </div>
         </section>
+
+        <section class="skills-section">
+            <div class="container">
+                <div class="section-header">
+                    <h2>Technical Skills & Tools</h2>
+                    <p class="subtitle">Comprehensive toolkit for product success</p>
+                </div>
+                <div class="skills-showcase">
+                    <div class="skills-grid">
+                        <div class="skill-category">
+                            <div class="skill-header">
+                                <div class="skill-icon-wrapper">
+                                    <i class="fas fa-tasks"></i>
+                                </div>
+                                <h3>Product Strategy</h3>
+                            </div>
+                            <div class="skill-content">
+                                <div class="skill-pills">
+                                    <span>PRD & BSP</span>
+                                    <span>Design Thinking</span>
+                                    <span>Roadmapping</span>
+                                    <span>User Research</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <div class="skill-header">
+                                <div class="skill-icon-wrapper">
+                                    <i class="fas fa-chart-bar"></i>
+                                </div>
+                                <h3>Analytics</h3>
+                            </div>
+                            <div class="skill-content">
+                                <div class="skill-pills">
+                                    <span>Mixpanel</span>
+                                    <span>MoEngage</span>
+                                    <span>Tableau</span>
+                                    <span>Google Analytics</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <div class="skill-header">
+                                <div class="skill-icon-wrapper">
+                                    <i class="fas fa-pencil-ruler"></i>
+                                </div>
+                                <h3>Design & Collaboration</h3>
+                            </div>
+                            <div class="skill-content">
+                                <div class="skill-pills">
+                                    <span>Figma</span>
+                                    <span>Miro</span>
+                                    <span>JIRA</span>
+                                    <span>Confluence</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="experience-section">
+            <div class="container">
+                <div class="section-header">
+                    <h2>Professional Journey</h2>
+                    <p class="subtitle">Key achievements and impact</p>
+                </div>
+                <div class="achievements-grid">
+                    <div class="achievement-card">
+                        <div class="achievement-content">
+                            <div class="achievement-icon">
+                                <i class="fas fa-rocket"></i>
+                            </div>
+                            <div class="achievement-details">
+                                <p class="achievement-stat">92%</p>
+                                <p class="achievement-label">Engagement</p>
+                                <div class="achievement-divider"></div>
+                                <p class="achievement-text">WhatsApp automation</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="achievement-card">
+                        <div class="achievement-content">
+                            <div class="achievement-icon">
+                                <i class="fas fa-chart-line"></i>
+                            </div>
+                            <div class="achievement-details">
+                                <p class="achievement-stat">80%</p>
+                                <p class="achievement-label">Revenue</p>
+                                <div class="achievement-divider"></div>
+                                <p class="achievement-text">New initiatives</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="achievement-card">
+                        <div class="achievement-content">
+                            <div class="achievement-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <div class="achievement-details">
+                                <p class="achievement-stat">60%</p>
+                                <p class="achievement-label">Retention</p>
+                                <div class="achievement-divider"></div>
+                                <p class="achievement-text">Via gamification</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
@@ -112,7 +244,6 @@
                     <h3>Contact</h3>
                     <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
                     <p><i class="fas fa-phone"></i> +919643383082</p>
-                    <a href="contact.html" class="button button-primary">Get in Touch</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -120,5 +251,289 @@
             </div>
         </div>
     </footer>
+
+    <style>
+        .skills-section {
+            padding: var(--spacing-xxl) 0;
+            background: linear-gradient(135deg, var(--accent-tertiary) 0%, var(--bg-secondary) 100%);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .skills-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, rgba(var(--color-primary-rgb), 0.2), transparent);
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: var(--spacing-xl);
+            padding: var(--spacing-xl) 0;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        .skill-category {
+            background: var(--color-white);
+            padding: calc(var(--spacing-xl) + 4px);
+            border-radius: var(--border-radius-lg);
+            box-shadow: var(--shadow-md);
+            transition: all 0.3s ease;
+            border: 1px solid rgba(var(--color-primary-rgb), 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .skill-category::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: var(--accent-primary);
+            opacity: 0.8;
+        }
+
+        .skill-category:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 24px rgba(var(--color-primary-rgb), 0.15);
+        }
+
+        .skill-header {
+            display: flex;
+            align-items: center;
+            gap: var(--spacing-md);
+            margin-bottom: var(--spacing-xl);
+        }
+
+        .skill-icon-wrapper {
+            width: 56px;
+            height: 56px;
+            background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));
+            border-radius: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 12px rgba(var(--accent-primary-rgb), 0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .skill-icon-wrapper::after {
+            content: '';
+            position: absolute;
+            top: 1px;
+            left: 1px;
+            right: 1px;
+            bottom: 1px;
+            border-radius: 13px;
+            background: linear-gradient(135deg, rgba(255,255,255,0.2), transparent);
+        }
+
+        .skill-icon-wrapper i {
+            color: white;
+            font-size: 1.5rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .skill-header h3 {
+            margin: 0;
+            color: var(--color-text);
+            font-size: var(--text-xl);
+            font-weight: 600;
+            letter-spacing: -0.02em;
+        }
+
+        .skill-content {
+            padding-top: var(--spacing-md);
+        }
+
+        .skill-pills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .skill-pills span {
+            background: rgba(var(--accent-primary-rgb), 0.08);
+            color: var(--accent-primary);
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: var(--text-sm);
+            font-weight: 500;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(var(--accent-primary-rgb), 0.12);
+        }
+
+        .skill-pills span:hover {
+            background: var(--accent-primary);
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(var(--accent-primary-rgb), 0.2);
+        }
+
+        .experience-section {
+            padding: var(--spacing-xxl) 0;
+            background: white;
+            position: relative;
+        }
+
+        .experience-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, rgba(var(--color-primary-rgb), 0.2), transparent);
+        }
+
+        .achievements-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: var(--spacing-xl);
+            padding: var(--spacing-xl) 0;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        .achievement-card {
+            background: var(--color-white);
+            padding: calc(var(--spacing-xl) + 4px);
+            border-radius: var(--border-radius-lg);
+            box-shadow: var(--shadow-md);
+            transition: all 0.3s ease;
+            border: 1px solid rgba(var(--color-primary-rgb), 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .achievement-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: var(--accent-primary);
+            opacity: 0.8;
+        }
+
+        .achievement-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 24px rgba(var(--color-primary-rgb), 0.15);
+        }
+
+        .achievement-content {
+            text-align: center;
+            padding: var(--spacing-md) 0;
+        }
+
+        .achievement-icon {
+            width: 60px;
+            height: 60px;
+            background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto var(--spacing-md);
+            box-shadow: 0 4px 12px rgba(var(--accent-primary-rgb), 0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .achievement-icon::after {
+            content: '';
+            position: absolute;
+            top: 1px;
+            left: 1px;
+            right: 1px;
+            bottom: 1px;
+            border-radius: 14px;
+            background: linear-gradient(135deg, rgba(255,255,255,0.2), transparent);
+        }
+
+        .achievement-icon i {
+            color: white;
+            font-size: 2rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .achievement-details {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: var(--spacing-xs);
+        }
+
+        .achievement-stat {
+            font-size: 2.5rem;
+            font-weight: 600;
+            background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin: 0;
+            line-height: 1.1;
+            letter-spacing: -0.02em;
+        }
+
+        .achievement-label {
+            font-size: var(--text-lg);
+            color: var(--color-text);
+            margin: 0;
+            font-weight: 600;
+            letter-spacing: -0.01em;
+        }
+
+        .achievement-divider {
+            width: 40px;
+            height: 3px;
+            background: linear-gradient(90deg, var(--accent-primary), var(--accent-secondary));
+            margin: var(--spacing-sm) 0;
+            border-radius: 2px;
+        }
+
+        .achievement-text {
+            font-size: var(--text-sm);
+            color: var(--color-text-light);
+            margin: 0;
+            line-height: 1.4;
+            max-width: 200px;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 768px) {
+            .skills-grid,
+            .achievements-grid {
+                grid-template-columns: 1fr;
+                gap: var(--spacing-lg);
+                padding: var(--spacing-lg) 0;
+            }
+
+            .skill-category,
+            .achievement-card {
+                padding: var(--spacing-lg);
+            }
+
+            .achievement-stat {
+                font-size: 3rem;
+            }
+
+            .achievement-icon {
+                width: 64px;
+                height: 64px;
+            }
+        }
+    </style>
 </body>
 </html> 
