--- a/case-studies.html
+++ b/case-studies.html
@@ -13,13 +13,13 @@
         <div class="container">
             <nav class="nav-container">
                 <a href="index.html" class="logo-container">
-                    <span class="logo-text">Product with Jasleen</span>
+                    <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                 </a>
                 <ul class="nav-links">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="offerings.html" class="nav-link">Services</a></li>
+                    <li><a href="offerings.html" class="nav-link">Offerings</a></li>
                     <li><a href="case-studies.html" class="nav-link active">Case Studies</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
@@ -44,82 +44,112 @@
 
         <section class="case-studies-section">
             <div class="container">
+                <div class="section-header text-center">
+                    <h2>Highlighting Key Case Studies & Expertise</h2>
+                    <p class="subtitle">Over the years, I have worked on several strategic initiatives that have significantly improved user engagement, retention, and business growth. Below are some case studies demonstrating tangible results and their impact on ROI.</p>
+                </div>
                 <div class="case-studies-grid">
                     <article class="case-study-card">
                         <div class="case-study-image">
-                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="E-commerce Platform Transformation">
-                            <div class="case-study-tag">Product Strategy</div>
+                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="Gamification for User Retention">
+                            <div class="case-study-tag">User Retention</div>
                         </div>
                         <div class="case-study-content">
-                            <h3>E-commerce Platform Transformation</h3>
-                            <p>How we revolutionized the online shopping experience and increased conversion by 150% through strategic UX improvements and data-driven decision making.</p>
+                            <h3>Gamification for User Retention</h3>
+                            <p>How We Turned Retention Struggles into a 25% Growth Story through gamified habit-tracking system and incentivized rewards.</p>
                             <div class="case-study-stats">
                                 <div class="stat">
-                                    <span class="stat-value">150%</span>
-                                    <span class="stat-label">Conversion Increase</span>
+                                    <span class="stat-value">25%</span>
+                                    <span class="stat-label">Retention Increase</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-value">3x</span>
-                                    <span class="stat-label">Revenue Growth</span>
+                                    <span class="stat-value">14</span>
+                                    <span class="stat-label">Day Program</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-value">-40%</span>
-                                    <span class="stat-label">Cart Abandonment</span>
+                                    <span class="stat-value">↑</span>
+                                    <span class="stat-label">LTV Growth</span>
                                 </div>
                             </div>
-                            <a href="#" class="button button-secondary">Read Case Study</a>
+                            <a href="case-study-gamification.html" class="button button-secondary">Read Case Study</a>
                         </div>
                     </article>
 
                     <article class="case-study-card">
                         <div class="case-study-image">
-                            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="SaaS Product Growth Strategy">
-                            <div class="case-study-tag">Growth</div>
+                            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="Post-Purchase Engagement">
+                            <div class="case-study-tag">Customer Engagement</div>
                         </div>
                         <div class="case-study-content">
-                            <h3>SaaS Product Growth Strategy</h3>
-                            <p>Achieving 200% user growth through strategic product initiatives, feature optimization, and targeted marketing campaigns for a B2B SaaS platform.</p>
+                            <h3>Boosting Post-Purchase Engagement</h3>
+                            <p>Transformed customer engagement through WhatsApp Business API and personalized follow-up system, leading to significant increase in renewals.</p>
                             <div class="case-study-stats">
                                 <div class="stat">
-                                    <span class="stat-value">200%</span>
-                                    <span class="stat-label">User Growth</span>
+                                    <span class="stat-value">45%</span>
+                                    <span class="stat-label">Engagement Rise</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-value">4.8</span>
-                                    <span class="stat-label">User Satisfaction</span>
+                                    <span class="stat-value">↑</span>
+                                    <span class="stat-label">Renewal Rate</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-value">-25%</span>
-                                    <span class="stat-label">Churn Rate</span>
+                                    <span class="stat-value">↑</span>
+                                    <span class="stat-label">Cross-selling</span>
                                 </div>
                             </div>
-                            <a href="#" class="button button-secondary">Read Case Study</a>
+                            <a href="case-study-engagement.html" class="button button-secondary">Read Case Study</a>
                         </div>
                     </article>
 
                     <article class="case-study-card">
                         <div class="case-study-image">
-                            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="Digital Transformation Initiative">
-                            <div class="case-study-tag">Digital Transformation</div>
+                            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="Unified Cart System">
+                            <div class="case-study-tag">E-commerce</div>
                         </div>
                         <div class="case-study-content">
-                            <h3>Digital Transformation Initiative</h3>
-                            <p>Leading a comprehensive digital transformation for a traditional enterprise, resulting in 35% operational efficiency improvement and enhanced customer experience.</p>
+                            <h3>Unified Cart System Implementation</h3>
+                            <p>Streamlined multi-category checkout process with unified cart and wallet system, dramatically improving conversion rates.</p>
                             <div class="case-study-stats">
                                 <div class="stat">
-                                    <span class="stat-value">35%</span>
-                                    <span class="stat-label">Efficiency Gain</span>
+                                    <span class="stat-value">30%</span>
+                                    <span class="stat-label">Cart Value ↑</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-value">$2.4M</span>
-                                    <span class="stat-label">Cost Savings</span>
+                                    <span class="stat-value">15%</span>
+                                    <span class="stat-label">Conversion ↑</span>
                                 </div>
                                 <div class="stat">
-                                    <span class="stat-value">+42%</span>
-                                    <span class="stat-label">Customer Satisfaction</span>
+                                    <span class="stat-value">↑</span>
+                                    <span class="stat-label">Repeat Buyers</span>
                                 </div>
                             </div>
-                            <a href="#" class="button button-secondary">Read Case Study</a>
+                            <a href="case-study-cart.html" class="button button-secondary">Read Case Study</a>
+                        </div>
+                    </article>
+
+                    <article class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" alt="AI Healthcare Assistant">
+                            <div class="case-study-tag">Healthcare AI</div>
+                        </div>
+                        <div class="case-study-content">
+                            <h3>Smart AI Assistant for Healthcare</h3>
+                            <p>Implemented AI-powered patient engagement system using ChatGPT API, revolutionizing healthcare provider efficiency.</p>
+                            <div class="case-study-stats">
+                                <div class="stat">
+                                    <span class="stat-value">30%</span>
+                                    <span class="stat-label">Faster Response</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">↑</span>
+                                    <span class="stat-label">Compliance</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">↓</span>
+                                    <span class="stat-label">Staff Load</span>
+                                </div>
+                            </div>
+                            <a href="case-study-healthcare.html" class="button button-secondary">Read Case Study</a>
                         </div>
                     </article>
                 </div>
@@ -145,7 +175,7 @@
             <div class="footer-grid">
                 <div class="footer-info">
                     <a href="index.html" class="logo-container">
-                        <span class="logo-text">Product with Jasleen</span>
+                        <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                     </a>
                     <p class="footer-text">Strategic product management services to help businesses innovate and grow.</p>
                     <div class="social-links">
@@ -168,7 +198,6 @@
                     <h3>Contact</h3>
                     <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
                     <p><i class="fas fa-phone"></i> +919643383082</p>
-                    <a href="contact.html" class="button button-primary">Get in Touch</a>
                 </div>
             </div>
             <div class="footer-bottom">
