--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="container">
             <nav class="nav-container">
                 <a href="index.html" class="logo-container">
-                    <span class="logo-text">Product with Jasleen</span>
+                    <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                 </a>
                 <ul class="nav-links">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="offerings.html" class="nav-link">Services</a></li>
+                    <li><a href="offerings.html" class="nav-link">Offerings</a></li>
                     <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
@@ -181,12 +181,12 @@
                     <div class="testimonial-card">
                         <div class="testimonial-content">
                             <i class="fas fa-quote-left testimonial-icon"></i>
-                            <p>"Jasleen's strategic approach to product management transformed our B2B SaaS platform. Her expertise in agile methodologies and user-centric design helped us achieve a 40% increase in user engagement and 25% reduction in churn. Her ability to align product strategy with business goals was exceptional."</p>
+                            <p>"Your structured approach to problem-solving and ability to bridge technology with business needs made a significant impact on our product execution."</p>
                         </div>
                         <div class="testimonial-author">
                             <div class="author-info">
-                                <h4>Sarah Johnson</h4>
-                                <p>CEO, TechStart Inc.</p>
+                                <h4>Venkatesh Wajalibad</h4>
+                                <p>Head of Technology & Engineering</p>
                             </div>
                         </div>
                     </div>
@@ -194,25 +194,12 @@
                     <div class="testimonial-card">
                         <div class="testimonial-content">
                             <i class="fas fa-quote-left testimonial-icon"></i>
-                            <p>"Working with Jasleen helped us revolutionize our product development process. Her implementation of agile practices and focus on data-driven decision making led to a 200% increase in feature adoption. She has an incredible ability to balance user needs with technical constraints."</p>
+                            <p>"Your deep understanding of product strategy and execution, combined with a user-first mindset, made collaborating with you incredibly effective and insightful."</p>
                         </div>
                         <div class="testimonial-author">
                             <div class="author-info">
-                                <h4>Michael Chen</h4>
-                                <p>Product Director, InnovateCo</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="testimonial-card">
-                        <div class="testimonial-content">
-                            <i class="fas fa-quote-left testimonial-icon"></i>
-                            <p>"Jasleen's product leadership was instrumental in our digital transformation journey. Her strategic vision and execution capabilities helped us achieve a 150% increase in conversion rates. She brings a perfect blend of technical knowledge and business acumen."</p>
-                        </div>
-                        <div class="testimonial-author">
-                            <div class="author-info">
-                                <h4>Emily Rodriguez</h4>
-                                <p>CTO, Digital Ventures</p>
+                                <h4>Antariksh Pandey</h4>
+                                <p>Product Lead, Microsoft</p>
                             </div>
                         </div>
                     </div>
@@ -245,7 +232,7 @@
             <div class="footer-grid">
                 <div class="footer-info">
                     <a href="index.html" class="logo-container">
-                        <span class="logo-text">Product with Jasleen</span>
+                        <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                     </a>
                     <p class="footer-text">Strategic product management services to help businesses innovate and grow.</p>
                     <div class="social-links">
@@ -259,7 +246,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="offerings.html">Services</a></li>
+                        <li><a href="offerings.html">Offerings</a></li>
                         <li><a href="case-studies.html">Case Studies</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -268,7 +255,6 @@
                     <h3>Contact</h3>
                     <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
                     <p><i class="fas fa-phone"></i> +919643383082</p>
-                    <a href="contact.html" class="button button-primary">Get in Touch</a>
                 </div>
             </div>
             <div class="footer-bottom">
