--- a/offerings.html
+++ b/offerings.html
@@ -13,13 +13,13 @@
         <div class="container">
             <nav class="nav-container">
                 <a href="index.html" class="logo-container">
-                    <span class="logo-text">Product with Jasleen</span>
+                    <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                 </a>
                 <ul class="nav-links">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="offerings.html" class="nav-link active">Services</a></li>
+                    <li><a href="offerings.html" class="nav-link active">Offerings</a></li>
                     <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
@@ -39,9 +39,12 @@
 
         <section class="process-section">
             <div class="container">
-                <div class="section-header">
-                    <h2>My Process</h2>
-                    <p class="subtitle">A proven methodology that delivers measurable results through strategic thinking and agile execution</p>
+                <div class="section-header text-center">
+                    <div class="section-icon">
+                        <i class="fas fa-route"></i>
+                    </div>
+                    <h2 class="text-center">My Process</h2>
+                    <p class="subtitle text-center">A proven methodology that delivers measurable results through strategic thinking and agile execution</p>
                 </div>
                 <div class="process-steps">
                     <div class="process-step">
@@ -78,9 +81,9 @@
 
         <section class="services-overview">
             <div class="container">
-                <div class="content-container">
-                    <h2>Service Offerings</h2>
-                    <p>I offer a comprehensive suite of product management services designed to help you build better products, optimize your processes, and achieve measurable business outcomes.</p>
+                <div class="section-header text-center">
+                    <h2 class="text-center">Service Offerings</h2>
+                    <p class="text-center">I offer a comprehensive suite of product management services designed to help you build better products, optimize your processes, and achieve measurable business outcomes.</p>
                 </div>
                 
                 <div class="services-grid">
@@ -143,7 +146,6 @@
                                 <i class="fas fa-rocket"></i>
                             </div>
                             <h3>Product Management Essentials</h3>
-                            <p class="package-price">Starting at $2,000/month</p>
                         </div>
                         <ul class="feature-list">
                             <li>Product Requirements Documentation</li>
@@ -162,7 +164,6 @@
                                 <i class="fas fa-chart-line"></i>
                             </div>
                             <h3>Product Roadmap & User Flow</h3>
-                            <p class="package-price">Starting at $3,500/month</p>
                         </div>
                         <ul class="feature-list">
                             <li>Everything in Essentials</li>
@@ -180,7 +181,6 @@
                                 <i class="fas fa-crown"></i>
                             </div>
                             <h3>Scrum Master Excellence</h3>
-                            <p class="package-price">Starting at $5,000/month</p>
                         </div>
                         <ul class="feature-list">
                             <li>Everything in Roadmap & User Flow</li>
@@ -211,17 +211,36 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="content-container">
-                <div class="footer-content">
-                    <div class="footer-info">
-                        <p class="footer-text">Ready to discuss your product challenges?</p>
-                        <a href="contact.html" class="button button-primary">Get in Touch</a>
-                    </div>
+            <div class="footer-grid">
+                <div class="footer-info">
+                    <a href="index.html" class="logo-container">
+                        <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
+                    </a>
+                    <p class="footer-text">Strategic product management services to help businesses innovate and grow.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
+                <div class="footer-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="offerings.html">Services</a></li>
+                        <li><a href="case-studies.html">Case Studies</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h3>Contact</h3>
+                    <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +919643383082</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Product with Jasleen. All rights reserved.</p>
             </div>
         </div>
     </footer>
